Bug 395081. AccessibleObjectFromPoint() returns errors. r=surkov, a=dsicore